Finish CLI, update README